@@ -60,6 +60,13 @@
     -<strong>l</strong><var>limit</var></code></p>
 
     <p><code><strong>htcacheclean</strong>
+    [ -<strong>v</strong> ]
+    [ -<strong>R</strong><var>round</var> ]
+    -<strong>p</strong><var>path</var>
+    [ -<strong>a</strong> ]
+    [ -<strong>A</strong> ]</code></p>
+
+    <p><code><strong>htcacheclean</strong>
     [ -<strong>D</strong> ]
     [ -<strong>v</strong> ]
     [ -<strong>t</strong> ]
@@ -128,7 +135,18 @@
     <dd>Be intelligent and run only when there was a modification of the disk
     cache. This option is only possible together with the <code>-d</code>
     option.</dd>
+
+    <dt><code>-a</code></dt>
+    <dd>List the URLs currently stored in the cache. Variants of the same URL
+    will be listed once for each variant.</dd>
+
+    <dt><code>-A</code></dt>
+    <dd>List the URLs currently stored in the cache, along with their
+    attributes in the following order: url, header size, body size, status,
+    entity version, date, expiry, request time, response time, body present,
+    head request.</dd>
     </dl>
+
 </section>
 
 <section id="delete"><title>Deleting a specific URL</title>
@@ -146,7 +164,33 @@
     <strong>http://localhost:80/?</strong>.</p>
 
 </section>
-    
+
+<section id="list"><title>Listing URLs in the Cache</title>
+    <p>By passing the <code>-a</code> or <code>-A</code> options to
+    <code>htcacheclean</code>, the URLs within the cache will be listed
+    as they are found, one URL per line. The <code>-A</code> option
+    dumps the full cache entry after the URL, with fields in the
+    following order:</p>
+
+    <dl>
+        <dt>url</dt><dd>The URL of the entry.</dd>
+        <dt>header size</dt><dd>The size of the header in bytes.</dd>
+        <dt>body size</dt><dd>The size of the body in bytes.</dd>
+        <dt>status</dt><dd>Status of the cached response.</dd>
+        <dt>entity version</dt><dd>The number of times this entry has been
+        revalidated without being deleted.</dd>
+        <dt>date</dt><dd>Date of the response.</dd>
+        <dt>expiry</dt><dd>Expiry date of the response.</dd>
+        <dt>request time</dt><dd>Time of the start of the request.</dd>
+        <dt>response time</dt><dd>Time of the end of the request.</dd>
+        <dt>body present</dt><dd>If 0, no body is stored with this request,
+        1 otherwise.</dd>
+        <dt>head request</dt><dd>If 1, the entry contains a cached HEAD
+        request with no body, 0 otherwise.</dd>
+    </dl>
+
+</section>
+
 <section id="exit"><title>Exit Status</title>
     <p><code>htcacheclean</code> returns a zero status ("true") if all
     operations were successful, <code>1</code> otherwise. If an URL is
